Bug 379756 - KCM in SySe asks for Apply after opening
Summary: KCM in SySe asks for Apply after opening
Status: RESOLVED FIXED
Alias: None
Product: plasma-nm
Classification: Unmaintained
Component: kcm (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Jan Grulich
URL:
Keywords:
: 395514 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-05-12 15:22 UTC by Roman Gilg
Modified: 2018-12-02 16:52 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
notification when wi-fi pw is encrypted (26.97 KB, image/png)
2017-09-25 23:45 UTC, Patrick Silva
Details
nmcli (3.80 KB, text/plain)
2017-10-31 10:47 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Gilg 2017-05-12 15:22:47 UTC
When opening the KCM from within SySe, the Apply button is active and going back again without changing anything, triggers the popup to apply or discard changes.
Comment 1 Jan Grulich 2017-05-16 06:37:48 UTC
What is your plasma-nm version?
Comment 2 Patrick Silva 2017-09-25 23:45:21 UTC
Created attachment 108027 [details]
notification when wi-fi pw is encrypted

I can confirm on neon dev unstable.
I use a wi-fi connection, a wired connection is listed but not active.
When I open kcm, wired connection is selected by default, When I back to "all settings" apply/discard dialog appears. If I select my wi-fi connection before back to "all settings", the same dialog does not appear.

My wi-fi password is not encrypted. If I set a encrypted password, the dialog never appears but I get a notification (see my screenshot). I think this is another bug.
Comment 3 Jan Grulich 2017-10-02 07:11:16 UTC
I unfortunately cannot reproduce this problem at this moment. I assume this is a duplicate of bug 376739. What version of plasma-nm do you use?
Comment 4 Patrick Silva 2017-10-02 13:43:45 UTC
(In reply to Jan Grulich from comment #3)
>What version of plasma-nm do you use?

Version 4:5.10.5+p16.04+git20170920.0309-0
Comment 5 Patrick Silva 2017-10-03 13:06:27 UTC
After enable kwallet on my system, apply/discard dialog appears even when I use an encryted password.
But the dialog appears only when I open the network kcm two or more times after start a new plasma session. On the first time I can leave the network kcm without any dialog.
Comment 6 Jan Grulich 2017-10-23 09:19:05 UTC
Git commit 6c57f972c20580e9c79714cc2ded7ae8f4d7307e by Jan Grulich.
Committed on 23/10/2017 at 09:18.
Pushed by grulich into branch 'Plasma/5.11'.

Do not load initially selected connection twice

M  +0    -2    kcm/kcm.cpp

https://commits.kde.org/plasma-nm/6c57f972c20580e9c79714cc2ded7ae8f4d7307e
Comment 7 Jan Grulich 2017-10-23 09:19:33 UTC
Git commit 8983814c4d190f54a3c9d0fc7d4d23c806a19108 by Jan Grulich.
Committed on 23/10/2017 at 09:19.
Pushed by grulich into branch 'Plasma/5.10'.

Do not load initially selected connection twice

M  +0    -2    kcm/kcm.cpp

https://commits.kde.org/plasma-nm/8983814c4d190f54a3c9d0fc7d4d23c806a19108
Comment 8 Patrick Silva 2017-10-30 16:32:50 UTC
reopening because it`s not fixed on neon user edition, plasma 5.11.2.
Comment 9 Jan Grulich 2017-10-31 07:58:44 UTC
Is this happening only when your ethernet connection is selected by default? Can you show me output from "nmcli -f all connection show con_name", where you replace con_name with the actual name of your ethernet connection.
Comment 10 Patrick Silva 2017-10-31 10:47:42 UTC
Created attachment 108650 [details]
nmcli

I have two connections, wired and wi-fi. Wi-fi is selected by default when kcm is opened.
Comment 11 Jan Grulich 2017-10-31 11:44:11 UTC
I'm no longer able to reproduce it. I'll keep this open and wait if someone else is able to reproduce it.
Comment 12 Patrick Silva 2017-10-31 11:59:04 UTC
wi-fi is selected by default only when is connected.
if a wi-fi connection is available by ethernet is active, ethernet is selected by default instead wi-fi.
Anf if ethernet is selected by default, apply/discard dialog does not appear.
Comment 13 Patrick Silva 2017-11-01 03:34:53 UTC
fixing typos...

wi-fi is selected by default only when is connected.
if a wi-fi connection is available but ethernet is active, ethernet is selected by default instead wi-fi.
And if ethernet is selected by default, apply/discard dialog does not appear.
Comment 14 Patrick Silva 2018-02-09 12:46:21 UTC
This problem is still happening on neon dev unstable.
I have both wired and wi-fi connections available, wi-fi is connected.
If I set "wpa/wpa2 personal" and encrypted or not-encrypted wi-fi password in "wi-fi security" tab, problem described in summary occurs.
No problem when I select "ask for this password everytime".
Comment 15 Patrick Silva 2018-06-17 18:59:12 UTC
*** Bug 395514 has been marked as a duplicate of this bug. ***
Comment 16 Patrick Silva 2018-10-29 18:59:10 UTC
(In reply to Roman Gilg from comment #0)
> When opening the KCM from within SySe, the Apply button is active and going
> back again without changing anything, triggers the popup to apply or discard
> changes.

Can anyone reproduce such behavior yet? I can't reproduce on neon dev unstable nor Solus running plasma 5.14.
Comment 17 Jan Grulich 2018-12-02 16:52:03 UTC
Git commit d3b466a2da7706bfe0ba4b6ec80890ecded667b4 by Jan Grulich.
Committed on 02/12/2018 at 16:51.
Pushed by grulich into branch 'Plasma/5.14'.

Notify that kcm changed only when validity has changed

M  +1    -1    kcm/kcm.cpp

https://commits.kde.org/plasma-nm/d3b466a2da7706bfe0ba4b6ec80890ecded667b4