Notify that kcm changed only when validity has changed

BUG: 379756